TransformationAlgebra/AlgebraParsers/TransformationAlgebraHParser.java
// Generated from TransformationAlgebraH.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TransformationAlgebraHParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RATIO=1, EQUAL=2, LEQ=3, AVG=4, MIN=5, MAX=6, COUNT=7, SIZE=8, MERGE=9, 
		REIFY=10, DEIFY=11, GET=12, INVERT=13, REVERT=14, FCONT=15, OCONT=16, 
		PI1=17, PI2=18, PI3=19, SIGMAE=20, SIGMASE=21, BOWTIE=22, BOWTIESTAR=23, 
		BOWTIERATIO=24, GROUPBYAVG=25, GROUPBYSUM=26, GROUPBYMIN=27, GROUPBYMAX=28, 
		GROUPBYSIZE=29, GROUPBYCOUNT=30, INTERPOL=31, ODIST=32, LDIST=33, LODIST=34, 
		OTOPO=35, LOTOPO=36, NDIST=37, LVIS=38, DATAPM=39, DATAAMOUNT=40, DATACONTOUR=41, 
		DATAOBJQ=42, DATAOBJS=43, DATAOBJV=44, DATACONTOURLINE=45, DATAOBJCOUNT=46, 
		DATAFIELD=47, TOPOV=48, SV=49, COUNTV=50, RATIOV=51, INTV=52, ORDV=53, 
		BOOLV=54, NOMV=55, DATAV=56, WHITESPACE=57, KEYWORD=58, WS=59;
	public static final int
		RULE_start = 0, RULE_r = 1, RULE_rr = 2, RULE_v = 3, RULE_f = 4, RULE_bf = 5, 
		RULE_countv = 6, RULE_ratiov = 7, RULE_intv = 8, RULE_ordv = 9, RULE_nomv = 10, 
		RULE_qv = 11, RULE_sv = 12, RULE_lv = 13, RULE_ov = 14, RULE_l = 15, RULE_s = 16, 
		RULE_o = 17, RULE_count = 18, RULE_ratio = 19, RULE_intt = 20, RULE_ordinal = 21, 
		RULE_nom = 22, RULE_q = 23, RULE_lratio = 24, RULE_lint = 25, RULE_lord = 26, 
		RULE_lnom = 27, RULE_lq = 28, RULE_ords = 29, RULE_ints = 30, RULE_noms = 31, 
		RULE_qs = 32, RULE_sint = 33, RULE_sord = 34, RULE_snom = 35, RULE_sq = 36, 
		RULE_os = 37, RULE_ocount = 38, RULE_oratio = 39, RULE_oint = 40, RULE_oord = 41, 
		RULE_onom = 42, RULE_oq = 43, RULE_ocounto = 44, RULE_oratioo = 45, RULE_ointo = 46, 
		RULE_oordo = 47, RULE_onomo = 48, RULE_lratioo = 49, RULE_linto = 50, 
		RULE_lnomo = 51, RULE_lratiol = 52, RULE_lintl = 53, RULE_lordl = 54, 
		RULE_lnoml = 55, RULE_lbooll = 56, RULE_groupbyaggord = 57, RULE_ratiovTratiov2ratiov = 58, 
		RULE_vTv2boolv = 59, RULE_ordvTordv2boolv = 60, RULE_vTv2v = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "r", "rr", "v", "f", "bf", "countv", "ratiov", "intv", "ordv", 
			"nomv", "qv", "sv", "lv", "ov", "l", "s", "o", "count", "ratio", "intt", 
			"ordinal", "nom", "q", "lratio", "lint", "lord", "lnom", "lq", "ords", 
			"ints", "noms", "qs", "sint", "sord", "snom", "sq", "os", "ocount", "oratio", 
			"oint", "oord", "onom", "oq", "ocounto", "oratioo", "ointo", "oordo", 
			"onomo", "lratioo", "linto", "lnomo", "lratiol", "lintl", "lordl", "lnoml", 
			"lbooll", "groupbyaggord", "ratiovTratiov2ratiov", "vTv2boolv", "ordvTordv2boolv", 
			"vTv2v"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ratio '", "'='", "'<='", "'avg '", "'min '", "'max '", "'count '", 
			"'size '", "'merge '", "'reify '", "'deify '", "'get '", "'invert '", 
			"'revert '", "'fcont '", "'ocont '", "'pi1 '", "'pi2 '", "'pi3 '", "'sigmae '", 
			"'sigmale '", "'bowtie '", "'bowtie* '", "'bowtie_ratio '", "'groupby_avg '", 
			"'groupby_sum '", "'groupby_min '", "'groupby_max '", "'groupby_size '", 
			"'groupby_count '", "'interpol '", "'odist '", "'ldist '", "'lodist '", 
			"'otopo '", "'lotopo '", "'ndist '", "'lvis '", null, null, null, null, 
			null, null, null, null, null, "'in'", null, null, null, null, null, null, 
			null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RATIO", "EQUAL", "LEQ", "AVG", "MIN", "MAX", "COUNT", "SIZE", 
			"MERGE", "REIFY", "DEIFY", "GET", "INVERT", "REVERT", "FCONT", "OCONT", 
			"PI1", "PI2", "PI3", "SIGMAE", "SIGMASE", "BOWTIE", "BOWTIESTAR", "BOWTIERATIO", 
			"GROUPBYAVG", "GROUPBYSUM", "GROUPBYMIN", "GROUPBYMAX", "GROUPBYSIZE", 
			"GROUPBYCOUNT", "INTERPOL", "ODIST", "LDIST", "LODIST", "OTOPO", "LOTOPO", 
			"NDIST", "LVIS", "DATAPM", "DATAAMOUNT", "DATACONTOUR", "DATAOBJQ", "DATAOBJS", 
			"DATAOBJV", "DATACONTOURLINE", "DATAOBJCOUNT", "DATAFIELD", "TOPOV", 
			"SV", "COUNTV", "RATIOV", "INTV", "ORDV", "BOOLV", "NOMV", "DATAV", "WHITESPACE", 
			"KEYWORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TransformationAlgebraH.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TransformationAlgebraHParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public RrContext rr() {
			return getRuleContext(RrContext.class,0);
		}
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(124);
				r();
				}
				break;
			case 2:
				{
				setState(125);
				rr();
				}
				break;
			case 3:
				{
				setState(126);
				v();
				}
				break;
			case 4:
				{
				setState(127);
				f();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RContext extends ParserRuleContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public QContext q() {
			return getRuleContext(QContext.class,0);
		}
		public OContext o() {
			return getRuleContext(OContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(130);
				l();
				}
				break;
			case 2:
				{
				setState(131);
				s();
				}
				break;
			case 3:
				{
				setState(132);
				q();
				}
				break;
			case 4:
				{
				setState(133);
				o();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RrContext extends ParserRuleContext {
		public LqContext lq() {
			return getRuleContext(LqContext.class,0);
		}
		public SqContext sq() {
			return getRuleContext(SqContext.class,0);
		}
		public QsContext qs() {
			return getRuleContext(QsContext.class,0);
		}
		public OqContext oq() {
			return getRuleContext(OqContext.class,0);
		}
		public OsContext os() {
			return getRuleContext(OsContext.class,0);
		}
		public RrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterRr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitRr(this);
		}
	}

	public final RrContext rr() throws RecognitionException {
		RrContext _localctx = new RrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(136);
				lq();
				}
				break;
			case 2:
				{
				setState(137);
				sq();
				}
				break;
			case 3:
				{
				setState(138);
				qs();
				}
				break;
			case 4:
				{
				setState(139);
				oq();
				}
				break;
			case 5:
				{
				setState(140);
				os();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContext extends ParserRuleContext {
		public OvContext ov() {
			return getRuleContext(OvContext.class,0);
		}
		public LvContext lv() {
			return getRuleContext(LvContext.class,0);
		}
		public SvContext sv() {
			return getRuleContext(SvContext.class,0);
		}
		public QvContext qv() {
			return getRuleContext(QvContext.class,0);
		}
		public VContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitV(this);
		}
	}

	public final VContext v() throws RecognitionException {
		VContext _localctx = new VContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_v);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(143);
				ov();
				}
				break;
			case 2:
				{
				setState(144);
				lv();
				}
				break;
			case 3:
				{
				setState(145);
				sv();
				}
				break;
			case 4:
				{
				setState(146);
				qv();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public BfContext bf() {
			return getRuleContext(BfContext.class,0);
		}
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitF(this);
		}
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_f);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(149);
			bf();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BfContext extends ParserRuleContext {
		public VTv2vContext vTv2v() {
			return getRuleContext(VTv2vContext.class,0);
		}
		public BfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterBf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitBf(this);
		}
	}

	public final BfContext bf() throws RecognitionException {
		BfContext _localctx = new BfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(151);
			vTv2v();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CountvContext extends ParserRuleContext {
		public TerminalNode COUNT() { return getToken(TransformationAlgebraHParser.COUNT, 0); }
		public OContext o() {
			return getRuleContext(OContext.class,0);
		}
		public TerminalNode GET() { return getToken(TransformationAlgebraHParser.GET, 0); }
		public CountContext count() {
			return getRuleContext(CountContext.class,0);
		}
		public TerminalNode COUNTV() { return getToken(TransformationAlgebraHParser.COUNTV, 0); }
		public CountvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_countv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterCountv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitCountv(this);
		}
	}

	public final CountvContext countv() throws RecognitionException {
		CountvContext _localctx = new CountvContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_countv);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COUNT:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				match(COUNT);
				setState(154);
				o();
				}
				break;
			case GET:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				match(GET);
				setState(156);
				count();
				}
				break;
			case COUNTV:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				match(COUNTV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RatiovContext extends ParserRuleContext {
		public TerminalNode FCONT() { return getToken(TransformationAlgebraHParser.FCONT, 0); }
		public LintContext lint() {
			return getRuleContext(LintContext.class,0);
		}
		public TerminalNode SIZE() { return getToken(TransformationAlgebraHParser.SIZE, 0); }
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public TerminalNode RATIO() { return getToken(TransformationAlgebraHParser.RATIO, 0); }
		public List<RatiovContext> ratiov() {
			return getRuleContexts(RatiovContext.class);
		}
		public RatiovContext ratiov(int i) {
			return getRuleContext(RatiovContext.class,i);
		}
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraHParser.WHITESPACE, 0); }
		public TerminalNode OCONT() { return getToken(TransformationAlgebraHParser.OCONT, 0); }
		public OratioContext oratio() {
			return getRuleContext(OratioContext.class,0);
		}
		public TerminalNode GET() { return getToken(TransformationAlgebraHParser.GET, 0); }
		public RatioContext ratio() {
			return getRuleContext(RatioContext.class,0);
		}
		public CountvContext countv() {
			return getRuleContext(CountvContext.class,0);
		}
		public TerminalNode RATIOV() { return getToken(TransformationAlgebraHParser.RATIOV, 0); }
		public RatiovContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ratiov; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterRatiov(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitRatiov(this);
		}
	}

	public final RatiovContext ratiov() throws RecognitionException {
		RatiovContext _localctx = new RatiovContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ratiov);
		try {
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(FCONT);
				setState(161);
				lint();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(SIZE);
				setState(163);
				l();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				match(RATIO);
				setState(165);
				ratiov();
				setState(166);
				match(WHITESPACE);
				setState(167);
				ratiov();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(169);
				match(OCONT);
				setState(170);
				oratio();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				match(GET);
				setState(172);
				ratio();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(173);
				countv();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(174);
				match(RATIOV);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntvContext extends ParserRuleContext {
		public TerminalNode AVG() { return getToken(TransformationAlgebraHParser.AVG, 0); }
		public LintContext lint() {
			return getRuleContext(LintContext.class,0);
		}
		public OintContext oint() {
			return getRuleContext(OintContext.class,0);
		}
		public RatiovContext ratiov() {
			return getRuleContext(RatiovContext.class,0);
		}
		public TerminalNode GET() { return getToken(TransformationAlgebraHParser.GET, 0); }
		public InttContext intt() {
			return getRuleContext(InttContext.class,0);
		}
		public TerminalNode INTV() { return getToken(TransformationAlgebraHParser.INTV, 0); }
		public IntvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).enterIntv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraHListener ) ((TransformationAlgebraHListener)listener).exitIntv(this);
		}
	}

	public final IntvContext intv() throws RecognitionException {
		IntvContext _localctx = new IntvContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_intv);
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				match(AVG);
				setState(178);
				lint();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				match(AVG);
				setState(180);
				oint();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(181);
				ratiov();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(182);
				match(GET);
				setState(183);
				intt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(184);
				match(INTV);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
